--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,11 +18,13 @@
   <mat-drawer-container class="container">
     <mat-drawer mode="side" opened class="navbar">
       <ul>
-        <li>Create User<mat-icon>person_add</mat-icon></li>
-        <li>List User<mat-icon>view_list</mat-icon></li>
-        <li>Help<mat-icon>help</mat-icon></li>
         <li>
-          <a (click)="onClick()">Logout<mat-icon>exit_to_app</mat-icon></a>
+          Create User <i><mat-icon>person_add</mat-icon></i>
+        </li>
+        <li>List User<mat-icon>view_list</mat-icon></li>
+        <li>Help <mat-icon>help</mat-icon></li>
+        <li>
+          <a (click)="onClick()">Logout <mat-icon>exit_to_app</mat-icon></a>
         </li>
       </ul>
     </mat-drawer>
