onboard user submit created

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -94,7 +94,10 @@
     <!-- Footer -->
     <p class="text-sm text-center text-gray-500">
       Don’t have an account?
-      <a href="#" class="text-blue-600 hover:underline" routerLink="/register"
+      <a
+        href="#"
+        class="text-blue-600 hover:underline"
+        [routerLink]="['/register']"
         >Sign up</a
       >
     </p>
