--- a/src/app/components/from-submit/from-submit.component.html
+++ b/src/app/components/from-submit/from-submit.component.html
@@ -1,1 +1,157 @@
-<p>from-submit works!</p>
+<div class="w-full flex justify-center items-center">
+  <form
+    (ngSubmit)="onSubmit(userform)"
+    #userform="ngForm"
+    class="w-[900px] flex flex-col bg-white border rounded-2xl p-10 relative"
+  >
+    <h1 class="text-black text-center text-4xl">Party & User Registration</h1>
+    <h4 class="text-blue-500 p-3 text-2xl">Party Information</h4>
+    <hr class="bg-gray-700 h-1" />
+    <div class="flex flex-row gap-8 relative top-2 justify-between">
+      <div class="flex flex-col">
+        <label for="pcode">Party Code</label>
+        <input
+          type="text"
+          name="partyCode"
+          id="pcode"
+          [(ngModel)]="this.rData.partyData.partyCode"
+          required
+          minlength="5"
+          maxlength="20"
+          class="w-[300px] border-2 p-2 focus:border-blue-500 outline-0"
+        />
+      </div>
+      <div class="flex flex-col">
+        <label for="pname">Party Name</label>
+        <input
+          type="text"
+          name="partyName"
+          id="pname"
+          [(ngModel)]="this.rData.partyData.partyName"
+          required
+          minlength="5"
+          maxlength="150"
+          class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+        />
+      </div>
+    </div>
+    <div class="flex flex-row gap-8 relative top-2 justify-between">
+      <div class="flex flex-col">
+        <label for="email">Email Address</label>
+        <input
+          type="email"
+          name="emailAddress"
+          id="email"
+          [(ngModel)]="this.rData.partyData.emailAddress"
+          required
+          minlength="5"
+          maxlength="20"
+          class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+        />
+      </div>
+      <div class="flex flex-col">
+        <label for="pnum">Phone Number</label>
+        <input
+          type="text"
+          name="mobileNumber"
+          id="pnum"
+          [(ngModel)]="this.rData.partyData.mobileNumber"
+          required
+          minlength="5"
+          maxlength="20"
+          class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+        />
+      </div>
+    </div>
+    <div>
+      <h4 class="text-blue-500 p-3 text-2xl mt-2">User Information</h4>
+      <hr class="bg-gray-700 h-1" />
+      <div class="mt-2.5">
+        <div class="flex flex-row justify-between">
+          <div class="flex flex-col">
+            <label for="userId">User Id</label>
+            <input
+              type="text"
+              name="userId"
+              id="userId"
+              [(ngModel)]="this.rData.userData.userId"
+              required
+              minlength="5"
+              maxlength="20"
+              class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+            />
+          </div>
+          <div class="flex flex-col">
+            <label for="fname">First Name</label>
+            <input
+              type="text"
+              name="firstName"
+              id="fname"
+              [(ngModel)]="this.rData.userData.firstName"
+              required
+              minlength="5"
+              maxlength="20"
+              class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+            />
+          </div>
+        </div>
+        <div class="flex flex-row justify-between">
+          <div class="flex flex-col">
+            <label for="lname">Last Name</label>
+            <input
+              type="text"
+              name="lastName"
+              id="lname"
+              [(ngModel)]="this.rData.userData.lastName"
+              required
+              minlength="5"
+              maxlength="20"
+              class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+            />
+          </div>
+          <div class="flex flex-col">
+            <label for="uemail">Email Address</label>
+            <input
+              type="email"
+              name="emailAddress"
+              id="uemail"
+              [(ngModel)]="this.rData.userData.emailAddress"
+              required
+              minlength="5"
+              maxlength="20"
+              class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+            />
+          </div>
+        </div>
+        <div class="flex flex-col">
+          <label for="mnum">Phone Number</label>
+          <input
+            type="text"
+            name="mobileNumber"
+            id="mnum"
+            [(ngModel)]="this.rData.userData.mobileNumber"
+            required
+            minlength="5"
+            maxlength="20"
+            class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="flex flex-row gap-5 mt-6 justify-center w-full">
+      <button
+        type="button"
+        class="bg-white text-blue-700 border-2 border-blue-700 rounded-3xl p-3 w-1/4 hover:bg-blue-700 hover:text-white transition cursor-pointer"
+      >
+        Cancel
+      </button>
+      <button
+        type="submit"
+        class="bg-blue-700 text-white rounded-3xl p-3 w-1/4 cursor-pointer"
+      >
+        Submit
+      </button>
+    </div>
+    <div class="text-red-600">{{ errorMsg }}</div>
+  </form>
+</div>
