--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -85,7 +85,8 @@
     <!-- Submit Button -->
     <button
       type="submit"
-      class="w-full bg-blue-600 text-white py-2 rounded-xl font-semibold hover:bg-blue-700 transition duration-300 disabled:opacity-50 disabled:cursor-not-allowed"
+      class="w-full bg-blue-600 text-white py-2 rounded-xl font-semibold hover:bg-blue-700 transition duration-300 disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer"
+      [ngClass]=""
     >
       Sign In
     </button>
