--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,34 +1,43 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+<table mat-table [dataSource]="users" class="mat-elevation-z8">
+  <!-- PARTY_NAME Column -->
+  <ng-container matColumnDef="PARTY_NAME">
+    <th mat-header-cell *matHeaderCellDef>PARTY NAME</th>
+    <td mat-cell *matCellDef="let user">{{ user.PARTY_NAME }}</td>
   </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  <!-- EMAIL_ADDRESS Column -->
+  <ng-container matColumnDef="EMAIL_ADDRESS">
+    <th mat-header-cell *matHeaderCellDef>EMAIL ADDRESS</th>
+    <td mat-cell *matCellDef="let user">{{ user.EMAIL_ADDRESS }}</td>
   </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+  <!-- MOBILE_NUMBER Column -->
+  <ng-container matColumnDef="MOBILE_NUMBER">
+    <th mat-header-cell *matHeaderCellDef>MOBILE NUMBER</th>
+    <td mat-cell *matCellDef="let user">{{ user.MOBILE_NUMBER }}</td>
   </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef> Symbol </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+  <!-- ACTIVE_CODE Column -->
+  <ng-container matColumnDef="ACTIVE_CODE">
+    <th mat-header-cell *matHeaderCellDef>ACTIVE CODE</th>
+    <td mat-cell *matCellDef="let user">{{ user.ACTIVE_CODE }}</td>
+  </ng-container>
+
+  <!-- STATUS_CODE Column -->
+  <ng-container matColumnDef="STATUS_CODE">
+    <th mat-header-cell *matHeaderCellDef>STATUS CODE</th>
+    <td mat-cell *matCellDef="let user">{{ user.STATUS_CODE }}</td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
 
+<!-- <app-pagination
+  [totalCount]="totalCount"
+  [pageSize]="pageSize"
+  [pageIndex]="pageIndex"
 
+>
+</app-pagination> -->
+<app-pagination></app-pagination>
