--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,58 +1,25 @@
-.container {
-  width: auto;
-  height: 100%;
-  border: 1px solid #ffffff;
-  background: #b34949;
-}
-
-.navbar {
-  height: 100vh;
-  background-color: rgb(3, 28, 28);
-  border-radius: 0px;
-  color: #fff;
-}
-
-.mat-drawer.mat-drawer-opened.mat-drawer-opened {
-  width: 277px;
-  transform: none;
-}
-
-.mat-drawer-container {
+.mat-drawer-content {
   position: relative;
-  z-index: 1;
-  color: var(--mat-sidenav-content-text-color, var(--mat-sys-on-background));
-  background-color: var(
-    --mat-sidenav-content-background-color,
-    var(--mat-sys-background)
-  );
-  display: inline;
-  box-sizing: border-box;
-  overflow: hidden;
-}
-
-.content {
-  width: 100%;
   z-index: 1;
   display: block;
   height: 100%;
   overflow: auto;
-  top: 0px;
-  right: 0px;
+  margin-top: 96px;
 }
 
-.navbar {
+.mat-drawer-inner-container {
+  width: 250px;
+  height: 100%;
+  overflow: auto;
+  background: #000000;
+}
+
+.mat-drawer.mat-drawer-opened.mat-drawer-opened {
+  transform: none;
+}
+
+table[_ngcontent-ng-c976244815] {
   width: 100%;
-  position: sticky;
-  top: 0px;
-}
-
-.s .mat-icon {
-  -webkit-user-select: none;
-  user-select: none;
-  background-repeat: no-repeat;
-  display: inline-block;
-  fill: currentColor;
-  height: 24px;
-  width: 24px;
-  overflow: hidden;
+  float: left;
+  margin-left: -20px;
 }
