--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
   </div>
   <form
     #myForm="ngForm"
-    (ngSubmit)="onsubmit(myForm)"
+    (ngSubmit)="onsubmit(myForm.value)"
     class="w-60 md:w-1/2 lg:w-1/4 xl:w-1/4 ms-5 flex flex-col gap-2 text-sm"
   >
     <h2 class="text-2xl font-bold text-gray-800 text-center">Sign In</h2>
@@ -18,6 +18,7 @@
       <input
         type="text"
         id="orgcode"
+        #orgCode="ngModel"
         name="orgcode"
         [(ngModel)]="this.formdata.orgCode"
         class="mt-1 p-2 block w-full rounded-xl border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50 placeholder:opacity-30"
@@ -27,6 +28,11 @@
         maxlength="20"
       />
     </div>
+    <span
+      *ngIf="orgCode.invalid && orgCode.touched"
+      class="text-red-600 inline-block mt-3"
+      >Organization Code is required</span
+    >
     <!-- User ID Input -->
     <div>
       <label for="loginId" class="block text-sm font-medium text-gray-700"
@@ -35,6 +41,7 @@
       <input
         type="text"
         id="loginId"
+        #name="ngModel"
         name="loginId"
         [(ngModel)]="this.formdata.loginId"
         class="mt-1 p-2 block w-full rounded-xl border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50 placeholder:opacity-30"
@@ -44,6 +51,11 @@
         maxlength="20"
       />
     </div>
+    <span
+      *ngIf="name.invalid && name.touched"
+      class="text-red-600 inline-block mt-3"
+      >User ID is required</span
+    >
 
     <!-- Password Input -->
     <div class="relative w-full">
@@ -54,6 +66,7 @@
       <input
         [type]="showPassword ? 'text' : 'password'"
         id="password"
+        #password="ngModel"
         name="password"
         [(ngModel)]="this.formdata.keyword"
         placeholder="Enter your Password"
@@ -70,7 +83,9 @@
         <i [class]="showPassword ? 'fas fa-eye-slash' : 'fas fa-eye'"></i>
       </button>
     </div>
-
+    <span *ngIf="password.invalid && password.touched" class="text-red-500"
+      >Password is required</span
+    >
     <!-- Remember Me & Forgot Password -->
     <div class="flex items-center justify-between">
       <label class="inline-flex items-center">
@@ -86,7 +101,7 @@
     <button
       type="submit"
       class="w-full bg-blue-600 text-white py-2 rounded-xl font-semibold hover:bg-blue-700 transition duration-300 disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer"
-      [ngClass]=""
+      [disabled]="myForm.invalid"
     >
       Sign In
     </button>
