--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container z-50">
   <div class="w-full flex justify-between bg-gray-300 p-5 relative">
     <div class="align-middle">
       <h1 class="text-3xl font-serif align-middle text-blue-900">
@@ -7,7 +7,7 @@
     </div>
 
     <div class="profile">
-      <h1>Welcome, {{ test }}</h1>
+      <h1>Welcome, {{ userName }}</h1>
       <div>
         <img src="https://picsum.photos/200" alt="profile.png" />
       </div>
