--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,7 +1,11 @@
 <div
   class="w-full min-h-screen flex gap-10 items-center justify-center p-4 mx-auto sm:px-10 h-[100vh]"
 >
-  <form class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg space-y-6">
+  <form
+    #UserReg="ngForm"
+    (ngSubmit)="(UserReg.value)"
+    class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg space-y-6"
+  >
     <h2 class="text-3xl font-bold text-gray-800 text-center">Create Account</h2>
 
     <!--user Name -->
@@ -12,6 +16,7 @@
       <input
         type="text"
         id="name"
+        #uname="ngModel"
         name="userName"
         [(ngModel)]="this.formData.userName"
         class="mt-1 p-2 block w-full rounded-xl border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50 placeholder:opacity-50"
@@ -20,6 +25,11 @@
         minlength="5"
         maxlength="20"
       />
+      <span
+        *ngIf="uname.invalid && uname.touched"
+        class="text-red-500 inline-block m-2"
+        >User Name is required</span
+      >
     </div>
 
     <!--User Email -->
@@ -30,14 +40,21 @@
       <input
         type="email"
         id="email"
+        #email="ngModel"
         name="email"
         [(ngModel)]="this.formData.email"
         class="mt-1 p-2 block w-full rounded-xl border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50 placeholder:opacity-50"
         placeholder="you@gmail.com"
+        email
         required
         minlength="5"
         maxlength="20"
       />
+      <span
+        *ngIf="email.invalid && email.touched"
+        class="text-red-500 inline-block m-2"
+        >Email Id is required</span
+      >
     </div>
 
     <!--User Password -->
@@ -49,6 +66,7 @@
       <input
         [type]="showPassword ? 'text' : 'password'"
         id="password"
+        #password="ngModel"
         name="password"
         [(ngModel)]="this.formData.keyword"
         placeholder="Enter your Password"
@@ -65,6 +83,11 @@
         <i [class]="showPassword ? 'fas fa-eye-slash' : 'fas fa-eye'"></i>
       </button>
     </div>
+    <span
+      *ngIf="password.invalid && password.touched"
+      class="text-red-500 inline-block m-2"
+      >Password is required</span
+    >
 
     <!-- Confirm Password -->
     <div class="relative w-full">
@@ -76,8 +99,9 @@
 
       <input
         [type]="showConfirmPassword ? 'text' : 'password'"
-        id="ConfirPassword"
-        name="ConfirPassword"
+        id="ConfirmPassword"
+        #confirmPassword="ngModel"
+        name="ConfirmPassword"
         [(ngModel)]="this.formData.ConfirmKeyword"
         placeholder="Confirm your Password"
         class="block w-full p-2 px-4 py-2 pr-12 rounded-xl border border-gray-300 shadow-sm focus:ring-2 focus:ring-blue-300 focus:outline-none placeholder:opacity-50"
@@ -95,12 +119,26 @@
         ></i>
       </button>
     </div>
+    <span
+      *ngIf="confirmPassword.invalid && confirmPassword.touched"
+      class="text-red-500 inline-block m-2"
+      >Confirm Password is required</span
+    >
+    <span
+      *ngIf="
+        password.touched &&
+        confirmPassword.touched &&
+        password.value !== confirmPassword.value
+      "
+      class="text-red-500 inline-block m-2"
+      >Confirm Password must be Same</span
+    >
 
     <!-- Submit -->
     <button
       type="submit"
-      class="w-full bg-blue-600 text-white py-2 rounded-xl font-semibold hover:bg-blue-700 transition duration-300 disabled:opacity-50"
-      [disabled]=""
+      class="w-full bg-blue-600 text-white py-2 rounded-xl font-semibold hover:bg-blue-700 transition duration-300 disabled:opacity-50 cursor-pointer disabled:cursor-not-allowed"
+      [disabled]="UserReg.invalid"
     >
       Register
     </button>
