--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -18,7 +18,7 @@
     [routerLink]="['/dashboard/listuser']"
     routerLinkActive="bg-gray-200 text-blue-600"
   >
-    List User<mat-icon>view_list</mat-icon>
+    User List<mat-icon>view_list</mat-icon>
   </li>
   <li>Help <mat-icon>help</mat-icon></li>
   <li>
@@ -27,3 +27,24 @@
     >
   </li>
 </ul>
+
+<!-- sdfghjk11 -->
+<!-- 
+<mat-drawer-container class="example-container" autosize>
+  <mat-drawer #drawer class="example-sidenav" mode="side">
+    <p>Auto-resizing sidenav</p>
+    @if (showFiller) {
+    <p>Lorem, ipsum dolor sit amet consectetur.</p>
+    }
+    <button (click)="showFiller = !showFiller" mat-raised-button>
+      Toggle extra text
+    </button>
+  </mat-drawer>
+
+  <div class="example-sidenav-content">
+    <button type="button" mat-button (click)="drawer.toggle()">
+      Toggle sidenav
+    </button>
+  </div>
+</mat-drawer-container>
+ -->
