--- a/src/app/components/listcustomer/listcustomer.component.html
+++ b/src/app/components/listcustomer/listcustomer.component.html
@@ -1,1 +1,51 @@
-<p>listcustomer works!</p>
+<table mat-table [dataSource]="users" class="mat-elevation-z8">
+  <!-- Position Column -->
+  <ng-container matColumnDef="PARTY_NAME">
+    <th mat-header-cell *matHeaderCellDef>PARTY NAME</th>
+    <td mat-cell *matCellDef="let user">{{ user.PARTY_NAME }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="PARTY_CODE">
+    <th mat-header-cell *matHeaderCellDef>PARTY CODE</th>
+    <td mat-cell *matCellDef="let user">{{ user.PARTY_CODE }}</td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="EMAIL_ADDRESS">
+    <th mat-header-cell *matHeaderCellDef>EMAIL ADDRESS</th>
+    <td mat-cell *matCellDef="let user">{{ user.EMAIL_ADDRESS }}</td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="MOBILE_NUMBER">
+    <th mat-header-cell *matHeaderCellDef>MOBILE NUMBER</th>
+    <td mat-cell *matCellDef="let user">{{ user.MOBILE_NUMBER }}</td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="ACTIVE_CODE">
+    <th mat-header-cell *matHeaderCellDef>ACTIVE CODE</th>
+    <td mat-cell *matCellDef="let user">{{ user.ACTIVE_CODE }}</td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>ACTIONS</th>
+    <td mat-cell *matCellDef="let user">
+      <app-edit-form></app-edit-form>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-paginator
+  [length]="100"
+  [pageIndex]="pageIndex"
+  [pageSize]="pageSize"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  aria-label="Select page"
+  (page)="onPageChange($event)"
+>
+</mat-paginator>
