--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,57 +1,46 @@
 <div class="min-h-screen">
-  <table mat-table [dataSource]="users" class="mat-elevation-z8">
+  <table mat-table [dataSource]="customers" class="mat-elevation-z8">
     <!-- PARTY_NAME Column -->
     <ng-container matColumnDef="PARTY_NAME">
       <th mat-header-cell *matHeaderCellDef>PARTY NAME</th>
-      <td mat-cell *matCellDef="let user">{{ user.PARTY_NAME }}</td>
+      <td mat-cell *matCellDef="let customer" class="overflow-x-scroll">
+        {{ customer.PARTY_NAME }}
+      </td>
     </ng-container>
 
     <!-- EMAIL_ADDRESS Column -->
     <ng-container matColumnDef="EMAIL_ADDRESS">
       <th mat-header-cell *matHeaderCellDef>EMAIL ADDRESS</th>
-      <td mat-cell *matCellDef="let user">{{ user.EMAIL_ADDRESS }}</td>
+      <td mat-cell *matCellDef="let customer">{{ customer.EMAIL_ADDRESS }}</td>
     </ng-container>
 
     <!-- MOBILE_NUMBER Column -->
     <ng-container matColumnDef="MOBILE_NUMBER">
       <th mat-header-cell *matHeaderCellDef>MOBILE NUMBER</th>
-      <td mat-cell *matCellDef="let user">{{ user.MOBILE_NUMBER }}</td>
+      <td mat-cell *matCellDef="let customer">{{ customer.MOBILE_NUMBER }}</td>
     </ng-container>
 
     <!-- ACTIVE_CODE Column -->
     <ng-container matColumnDef="ACTIVE_CODE">
       <th mat-header-cell *matHeaderCellDef>ACTIVE CODE</th>
-      <td mat-cell *matCellDef="let user">{{ user.ACTIVE_CODE }}</td>
+      <td mat-cell *matCellDef="let customer">{{ customer.ACTIVE_CODE }}</td>
     </ng-container>
 
     <!-- STATUS_CODE Column -->
     <ng-container matColumnDef="STATUS_CODE">
       <th mat-header-cell *matHeaderCellDef>STATUS CODE</th>
-      <td mat-cell *matCellDef="let user">{{ user.STATUS_CODE }}</td>
+      <td mat-cell *matCellDef="let customer">{{ customer.STATUS_CODE }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>ACTION</th>
-      <td mat-cell *matCellDef="let user">
-        <button class="text-xs p-1 rounded bg-yellow-500 text-white me-2">
-          Edit
-        </button>
-        <button class="text-xs p-1 rounded bg-red-500 text-white">
-          Delete
-        </button>
+      <td mat-cell *matCellDef="let customer">
+        <app-edit-form></app-edit-form>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
-
-  <!-- <app-pagination
-    [totalCount]="totalCount"
-    [pageSize]="pageSize"
-    [pageIndex]="pageIndex"
-  
-  >
-  </app-pagination> -->
   <app-pagination></app-pagination>
 </div>
