--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-full">
   <app-navbar></app-navbar>
   <mat-drawer-container class="container">
-    <mat-drawer mode="side" [opened]="isOpened" class="bg-red-500 w-[300px]">
+    <mat-drawer mode="side" [opened]="isOpened">
       <app-sidenav></app-sidenav>
     </mat-drawer>
     <mat-drawer-content>
