--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,81 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+html {
+  --mat-sys-corner-extra-large: 28px;
+  --mat-sys-corner-extra-large-top: 28px 28px 0 0;
+  --mat-sys-corner-extra-small: 4px;
+  --mat-sys-corner-extra-small-top: 4px 4px 0 0;
+  --mat-sys-corner-full: 9999px;
+  --mat-sys-corner-large: 0;
+  --mat-sys-corner-large-end: 0 16px 16px 0;
+  --mat-sys-corner-large-start: 16px 0 0 16px;
+  --mat-sys-corner-large-top: 16px 16px 0 0;
+  --mat-sys-corner-medium: 12px;
+  --mat-sys-corner-none: 0;
+}
+
+.mat-drawer-inner-container {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: rgb(0, 0, 0);
+}
+
+.mat-drawer-side {
+  box-shadow: none;
+  border-right-color: var(--mat-sidenav-container-divider-color, transparent);
+  border-right-width: 1px;
+  border-right-style: solid;
+}
+
+:host ::ng-deep .mat-drawer {
+  position: relative;
+  z-index: 4;
+  color: var(
+    --mat-sidenav-container-text-color,
+    var(--mat-sys-on-surface-variant)
+  );
+  box-shadow: var(--mat-sidenav-container-elevation-shadow, none);
+  background-color: var(
+    --mat-sidenav-container-background-color,
+    var(--mat-sys-surface)
+  );
+  border-top-right-radius: var(
+    --mat-sidenav-container-shape,
+    var(--mat-sys-corner-large)
+  );
+  border-bottom-right-radius: var(
+    --mat-sidenav-container-shape,
+    var(--mat-sys-corner-large)
+  );
+  width: var(--mat-sidenav-container-width, 245px) !important;
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 3;
+  outline: 0;
+  box-sizing: border-box;
+  overflow-y: auto;
+  transform: translate3d(-100%, 0, 0);
+}
+
+.mat-drawer-content[_ngcontent-ng-c2640618521] {
+  position: relative;
+  z-index: 1;
+  display: block;
+  height: 100%;
+  overflow: auto;
+  margin-top: 0px;
+}
+
+@media (width >= 48rem) {
+  .container {
+    max-width: 100%;
+  }
+}
+
 @media (width >= 64rem) {
   .container {
     max-width: 100%;
