--- a/src/app/components/edit-form/edit-form.component.html
+++ b/src/app/components/edit-form/edit-form.component.html
@@ -1,17 +1,73 @@
-<button
-  mat-icon-button
-  [matMenuTriggerFor]="menu"
-  aria-label="icon-button with a menu"
->
-  <mat-icon>more_vert</mat-icon>
-</button>
-<mat-menu #menu="matMenu">
-  <button mat-menu-item>
-    <mat-icon>edit</mat-icon>
-    <span>Edit</span>
-  </button>
-  <button mat-menu-item>
-    <mat-icon>delete</mat-icon>
-    <span>Delete</span>
-  </button>
-</mat-menu>
+<div class="min-h-screen relative">
+  <form
+    class="bg-amber-200 border-2 rounded-2xl w-1/2 h-[50vh] relative top-40 left-100"
+    *ngIf="user"
+  >
+    <h3 class="text-2xl p-3 font-bold pb-6">User Details Upadate</h3>
+    <div class="flex justify-around pb-5">
+      <div class="flex flex-col">
+        <label for="uname">First Name</label>
+        <input
+          type="text"
+          #uname="ngModel"
+          id="uname"
+          class="border-2 rounded p-2"
+          [(ngModel)]="user.name"
+          required
+          minlength="1"
+          maxlength="20"
+        />
+      </div>
+      <div class="flex flex-col">
+        <label for="lname">Last Name</label>
+        <input
+          type="text"
+          id="lname"
+          name="lname"
+          #lname="ngModel"
+          required
+          [(ngModel)]="user.name"
+          class="border-2 rounded p-2"
+        />
+      </div>
+    </div>
+    <div class="flex justify-around pb-5">
+      <div class="flex flex-col">
+        <label for="userId">User Id</label>
+        <input
+          type="text"
+          id="userId"
+          name="userId"
+          class="border-2 rounded p-2"
+          required
+          minlength="1"
+          maxlength="20"
+          #userId="ngModel"
+          [(ngModel)]="user.id"
+        />
+      </div>
+      <div class="flex flex-col">
+        <label for="uemail">Email Address</label>
+        <input type="text" id="uemail" class="border-2 rounded p-2" />
+      </div>
+    </div>
+    <div class="flex float-start absolute pl-28">
+      <div class="flex flex-col">
+        <label for="pNo">Phone Number</label>
+        <input type="text" id="pNo" class="border-2 rounded p-2" />
+      </div>
+    </div>
+    <div class="flex flex-row gap-30 absolute top-90 right-60">
+      <button
+        class="bg-blue-600 text-white p-5 w-[100px] rounded-2xl hover:bg-white hover:border-blue-600 hover:transition-all hover:text-blue-600"
+      >
+        Back
+      </button>
+      <button
+        class="bg-orange-600 text-white p-5 w-[100px] rounded-2xl hover:bg-white hover:border-orange-600 hover:transition-all hover:text-orange-600"
+      >
+        Update
+      </button>
+    </div>
+  </form>
+</div>
