--- a/src/app/components/listcustomer/listcustomer.component.html
+++ b/src/app/components/listcustomer/listcustomer.component.html
@@ -1,51 +1,61 @@
-<table mat-table [dataSource]="users" class="mat-elevation-z8">
-  <!-- Position Column -->
-  <ng-container matColumnDef="PARTY_NAME">
-    <th mat-header-cell *matHeaderCellDef>PARTY NAME</th>
-    <td mat-cell *matCellDef="let user">{{ user.PARTY_NAME }}</td>
-  </ng-container>
+<div class="min-h-screen">
+  <table mat-table [dataSource]="users" class="mat-elevation-z8">
+    <!-- PARTY_NAME Column -->
+    <ng-container matColumnDef="PARTY_NAME">
+      <th mat-header-cell *matHeaderCellDef>USER NAME</th>
+      <td mat-cell *matCellDef="let user">
+        {{ user.PARTY_NAME }}
+      </td>
+    </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="PARTY_CODE">
-    <th mat-header-cell *matHeaderCellDef>PARTY CODE</th>
-    <td mat-cell *matCellDef="let user">{{ user.PARTY_CODE }}</td>
-  </ng-container>
+    <!-- PARTY_CODE Column -->
+    <ng-container matColumnDef="PARTY_CODE">
+      <th mat-header-cell *matHeaderCellDef>USER ID</th>
+      <td mat-cell *matCellDef="let user">{{ user.PARTY_CODE }}</td>
+    </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="EMAIL_ADDRESS">
-    <th mat-header-cell *matHeaderCellDef>EMAIL ADDRESS</th>
-    <td mat-cell *matCellDef="let user">{{ user.EMAIL_ADDRESS }}</td>
-  </ng-container>
+    <!-- EMAIL_ADDRESS Column -->
+    <ng-container matColumnDef="EMAIL_ADDRESS">
+      <th mat-header-cell *matHeaderCellDef>EMAIL ADDRESS</th>
+      <td mat-cell *matCellDef="let user">{{ user.EMAIL_ADDRESS }}</td>
+    </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="MOBILE_NUMBER">
-    <th mat-header-cell *matHeaderCellDef>MOBILE NUMBER</th>
-    <td mat-cell *matCellDef="let user">{{ user.MOBILE_NUMBER }}</td>
-  </ng-container>
+    <!-- MOBILE_NUMBER Column -->
+    <ng-container matColumnDef="MOBILE_NUMBER">
+      <th mat-header-cell *matHeaderCellDef>MOBILE NUMBER</th>
+      <td mat-cell *matCellDef="let user">{{ user.MOBILE_NUMBER }}</td>
+    </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="ACTIVE_CODE">
-    <th mat-header-cell *matHeaderCellDef>ACTIVE CODE</th>
-    <td mat-cell *matCellDef="let user">{{ user.ACTIVE_CODE }}</td>
-  </ng-container>
+    <!-- LAST_UPDATED_ON Column -->
+    <ng-container matColumnDef="LAST_UPDATED_ON">
+      <th mat-header-cell *matHeaderCellDef>LAST UPDATED ON</th>
+      <td mat-cell *matCellDef="let user">{{ user.LAST_UPDATED_ON }}</td>
+    </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef>ACTIONS</th>
-    <td mat-cell *matCellDef="let user">
-      <app-edit-form></app-edit-form>
-    </td>
-  </ng-container>
+    <!-- ACTIVE_CODE Column -->
+    <ng-container matColumnDef="ACTIVE_CODE">
+      <th mat-header-cell *matHeaderCellDef>ACTIVE CODE</th>
+      <td mat-cell *matCellDef="let user">{{ user.ACTIVE_CODE }}</td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
-<mat-paginator
-  [length]="100"
-  [pageIndex]="pageIndex"
-  [pageSize]="pageSize"
-  [pageSizeOptions]="[5, 10, 25, 100]"
-  aria-label="Select page"
-  (page)="onPageChange($event)"
->
-</mat-paginator>
+    <!-- actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>ACTIONS</th>
+      <td mat-cell *matCellDef="let user">
+        <app-edit-button [userId]="user.PARTY_CODE"></app-edit-button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+  <mat-paginator
+    [length]="totalCount"
+    [pageIndex]="pageIndex"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="[5, 10, 25, 100, totalCount]"
+    aria-label="Select page"
+    (page)="onPageChange($event)"
+  >
+  </mat-paginator>
+</div>
