--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
   </div>
   <form
     #myForm="ngForm"
-    (ngSubmit)="onsubmit(myForm.value)"
+    (ngSubmit)="onsubmit(myForm)"
     class="w-60 md:w-1/2 lg:w-1/4 xl:w-1/4 ms-5 flex flex-col gap-2 text-sm"
   >
     <h2 class="text-2xl font-bold text-gray-800 text-center">Sign In</h2>
@@ -24,12 +24,12 @@
         class="mt-1 p-2 block w-full rounded-xl border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50 placeholder:opacity-30"
         placeholder="BSIT"
         required
-        minlength="5"
+        minlength="1"
         maxlength="20"
       />
     </div>
     <span
-      *ngIf="orgCode.invalid && orgCode.touched"
+      *ngIf="(myForm.submitted || orgCode.touched) && orgCode.invalid"
       class="text-red-600 inline-block mt-3"
       >Organization Code is required</span
     >
@@ -47,12 +47,12 @@
         class="mt-1 p-2 block w-full rounded-xl border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50 placeholder:opacity-30"
         placeholder="MAKER"
         required
-        minlength="5"
+        minlength="1"
         maxlength="20"
       />
     </div>
     <span
-      *ngIf="name.invalid && name.touched"
+      *ngIf="(myForm.submitted || name.touched) && name.invalid"
       class="text-red-600 inline-block mt-3"
       >User ID is required</span
     >
@@ -83,7 +83,9 @@
         <i [class]="showPassword ? 'fas fa-eye-slash' : 'fas fa-eye'"></i>
       </button>
     </div>
-    <span *ngIf="password.invalid && password.touched" class="text-red-500"
+    <span
+      *ngIf="(myForm.submitted || password.touched) && password.invalid"
+      class="text-red-500"
       >Password is required</span
     >
     <!-- Remember Me & Forgot Password -->
@@ -101,11 +103,12 @@
     <button
       type="submit"
       class="w-full bg-blue-600 text-white py-2 rounded-xl font-semibold hover:bg-blue-700 transition duration-300 disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer"
-      [disabled]="myForm.invalid"
     >
       Sign In
     </button>
-    <div class="text-red-600">{{ errorMsg }}</div>
+    <div class="text-red-600">
+      {{ errorMsg }}
+    </div>
 
     <!-- Footer -->
     <p class="text-sm text-center text-gray-500">
