--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -35,12 +35,20 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>ACTION</th>
       <td mat-cell *matCellDef="let customer">
-        <app-edit-form></app-edit-form>
+        <app-edit-button></app-edit-button>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
-  <app-pagination></app-pagination>
+  <mat-paginator
+    [length]="totalCount"
+    [pageSize]="pageSize"
+    [pageIndex]="pageIndex"
+    [pageSizeOptions]="[5, 10, 25, 100, totalCount]"
+    aria-label="Select page"
+    (page)="onPageChange($event)"
+  >
+  </mat-paginator>
 </div>
