--- a/src/app/components/edit-form/edit-form.component.html
+++ b/src/app/components/edit-form/edit-form.component.html
@@ -1,73 +1,122 @@
-<div class="min-h-screen relative">
+<div class="w-full flex justify-center items-center min-h-screen">
   <form
-    class="bg-amber-200 border-2 rounded-2xl w-1/2 h-[50vh] relative top-40 left-100"
-    *ngIf="user"
+    (ngSubmit)="modifyUser(modifyForm)"
+    #modifyForm="ngForm"
+    class="w-[900px] flex flex-col bg-white rounded-2xl p-10 relative"
   >
-    <h3 class="text-2xl p-3 font-bold pb-6">User Details Upadate</h3>
-    <div class="flex justify-around pb-5">
-      <div class="flex flex-col">
-        <label for="uname">First Name</label>
-        <input
-          type="text"
-          #uname="ngModel"
-          id="uname"
-          class="border-2 rounded p-2"
-          [(ngModel)]="user.name"
-          required
-          minlength="1"
-          maxlength="20"
-        />
-      </div>
-      <div class="flex flex-col">
-        <label for="lname">Last Name</label>
-        <input
-          type="text"
-          id="lname"
-          name="lname"
-          #lname="ngModel"
-          required
-          [(ngModel)]="user.name"
-          class="border-2 rounded p-2"
-        />
+    <div>
+      <h4 class="text-blue-500 p-3 text-2xl mt-2">User Information</h4>
+      <hr class="bg-gray-700 h-1" />
+      <div class="mt-2.5">
+        <div class="flex flex-row justify-between">
+          <div class="flex flex-col">
+            <label for="userId">User Id</label>
+            <input
+              type="text"
+              #uname="ngModel"
+              name="userId"
+              id="userId"
+              [(ngModel)]="this.eData.userId"
+              required
+              minlength="1"
+              maxlength="20"
+              class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+            />
+            <span
+              *ngIf="(modifyForm.submitted || uname.touched) && uname.invalid"
+              class="text-red-500"
+              >User Id is required*</span
+            >
+          </div>
+          <div class="flex flex-col">
+            <label for="fname">First Name</label>
+            <input
+              type="text"
+              #fname="ngModel"
+              name="firstName"
+              id="fname"
+              [(ngModel)]="this.eData.firstName"
+              required
+              minlength="1"
+              maxlength="40"
+              class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+            />
+            <span
+              *ngIf="(modifyForm.submitted || fname.touched) && fname.invalid"
+              class="text-red-500"
+              >First Name is required*</span
+            >
+          </div>
+        </div>
+        <div class="flex flex-row justify-between">
+          <div class="flex flex-col">
+            <label for="lname">Last Name</label>
+            <input
+              type="text"
+              #lname="ngModel"
+              name="lastName"
+              id="lname"
+              [(ngModel)]="this.eData.lastName"
+              required
+              minlength="1"
+              maxlength="20"
+              class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+            />
+            <span
+              *ngIf="(modifyForm.submitted || lname.touched) && lname.invalid"
+              class="text-red-500"
+              >Last Name is required*</span
+            >
+          </div>
+          <div class="flex flex-col">
+            <label for="uemail">Email Address</label>
+            <input
+              type="email"
+              #uemail="ngModel"
+              name="emailAddress"
+              id="uemail"
+              [(ngModel)]="this.eData.emailAddress"
+              required
+              minlength="1"
+              maxlength="20"
+              class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+            />
+            <span
+              *ngIf="(modifyForm.submitted || uemail.touched) && uemail.invalid"
+              class="text-red-500"
+              >Email Address is required*</span
+            >
+          </div>
+        </div>
+        <div class="flex flex-col">
+          <label for="mnum">Phone Number</label>
+          <input
+            type="text"
+            #uphone="ngModel"
+            name="mobileNumber"
+            id="mnum"
+            [(ngModel)]="this.eData.mobileNumber"
+            required
+            minlength="1"
+            maxlength="20"
+            class="w-[300px] border-2 p-2 rounded focus:border-blue-500 outline-0"
+          />
+          <span
+            *ngIf="(modifyForm.submitted || uphone.touched) && uphone.invalid"
+            class="text-red-500"
+            >Phone Number is required*</span
+          >
+        </div>
       </div>
     </div>
-    <div class="flex justify-around pb-5">
-      <div class="flex flex-col">
-        <label for="userId">User Id</label>
-        <input
-          type="text"
-          id="userId"
-          name="userId"
-          class="border-2 rounded p-2"
-          required
-          minlength="1"
-          maxlength="20"
-          #userId="ngModel"
-          [(ngModel)]="user.id"
-        />
-      </div>
-      <div class="flex flex-col">
-        <label for="uemail">Email Address</label>
-        <input type="text" id="uemail" class="border-2 rounded p-2" />
-      </div>
-    </div>
-    <div class="flex float-start absolute pl-28">
-      <div class="flex flex-col">
-        <label for="pNo">Phone Number</label>
-        <input type="text" id="pNo" class="border-2 rounded p-2" />
-      </div>
-    </div>
-    <div class="flex flex-row gap-30 absolute top-90 right-60">
+    <div class="w-full flex justify-center relative">
       <button
-        class="bg-blue-600 text-white p-5 w-[100px] rounded-2xl hover:bg-white hover:border-blue-600 hover:transition-all hover:text-blue-600"
+        type="submit"
+        class="bg-white text-blue-700 border-2 border-blue-700 rounded-3xl p-3 mt-9 w-1/4 hover:bg-blue-700 hover:text-white transition-all cursor-pointer"
       >
-        Back
+        Submit
       </button>
-      <button
-        class="bg-orange-600 text-white p-5 w-[100px] rounded-2xl hover:bg-white hover:border-orange-600 hover:transition-all hover:text-orange-600"
-      >
-        Update
-      </button>
+      <div class="text-red-600 absolute bottom-0 right-0">{{ errorMsg }}</div>
     </div>
   </form>
 </div>
