--- a/src/app/components/listcustomer/listcustomer.component.html
+++ b/src/app/components/listcustomer/listcustomer.component.html
@@ -4,14 +4,16 @@
     <ng-container matColumnDef="PARTY_NAME">
       <th mat-header-cell *matHeaderCellDef>USER NAME</th>
       <td mat-cell *matCellDef="let user">
-        {{ user.PARTY_NAME }}
+        <p class="w-[200px] overflow-x-hidden">{{ user.PARTY_NAME }}</p>
       </td>
     </ng-container>
 
     <!-- PARTY_CODE Column -->
     <ng-container matColumnDef="PARTY_CODE">
       <th mat-header-cell *matHeaderCellDef>USER ID</th>
-      <td mat-cell *matCellDef="let user">{{ user.PARTY_CODE }}</td>
+      <td mat-cell *matCellDef="let user">
+        <p class="w-[100px]">{{ user.PARTY_CODE }}</p>
+      </td>
     </ng-container>
 
     <!-- EMAIL_ADDRESS Column -->
@@ -42,7 +44,32 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>ACTIONS</th>
       <td mat-cell *matCellDef="let user">
-        <app-edit-button [userId]="user.PARTY_CODE"></app-edit-button>
+        <button
+          mat-icon-button
+          [matMenuTriggerFor]="menu"
+          aria-label="icon-button with a menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button
+            mat-menu-item
+            [routerLink]="['edit-form']"
+            [queryParams]="{
+              id: user.PARTY_CODE,
+              name: user.PARTY_NAME,
+              email: user.EMAIL_ADDRESS,
+              no: user.MOBILE_NUMBER
+            }"
+          >
+            <mat-icon>edit</mat-icon>
+            <span>Edit</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon>delete</mat-icon>
+            <span>Delete</span>
+          </button>
+        </mat-menu>
       </td>
     </ng-container>
 
