--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -21,9 +21,9 @@
     </ng-container>
 
     <!-- ACTIVE_CODE Column -->
-    <ng-container matColumnDef="ACTIVE_CODE">
-      <th mat-header-cell *matHeaderCellDef>ACTIVE CODE</th>
-      <td mat-cell *matCellDef="let customer">{{ customer.ACTIVE_CODE }}</td>
+    <ng-container matColumnDef="PARTY_CODE">
+      <th mat-header-cell *matHeaderCellDef>PARTY CODE</th>
+      <td mat-cell *matCellDef="let customer">{{ customer.PARTY_CODE }}</td>
     </ng-container>
 
     <!-- STATUS_CODE Column -->
@@ -35,7 +35,32 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>ACTION</th>
       <td mat-cell *matCellDef="let customer">
-        <app-edit-button></app-edit-button>
+        <button
+          mat-icon-button
+          [matMenuTriggerFor]="menu"
+          aria-label="icon-button with a menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button
+            mat-menu-item
+            [routerLink]="['edit-customer']"
+            [queryParams]="{
+              id: customer.PARTY_CODE,
+              name: customer.PARTY_NAME,
+              email: customer.EMAIL_ADDRESS,
+              no: customer.MOBILE_NUMBER
+            }"
+          >
+            <mat-icon>edit</mat-icon>
+            <span>Edit</span>
+          </button>
+          <button mat-menu-item (click)="remove(customer)">
+            <mat-icon>delete</mat-icon>
+            <span>Delete</span>
+          </button>
+        </mat-menu>
       </td>
     </ng-container>
 
