--- a/src/app/components/listcustomer/listcustomer.component.html
+++ b/src/app/components/listcustomer/listcustomer.component.html
@@ -31,7 +31,9 @@
     <!-- LAST_UPDATED_ON Column -->
     <ng-container matColumnDef="LAST_UPDATED_ON">
       <th mat-header-cell *matHeaderCellDef>LAST UPDATED ON</th>
-      <td mat-cell *matCellDef="let user">{{ user.LAST_UPDATED_ON }}</td>
+      <td mat-cell *matCellDef="let user">
+        {{ user.LAST_UPDATED_ON | date:"medium" }}
+      </td>
     </ng-container>
 
     <!-- ACTIVE_CODE Column -->
