--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -17,7 +17,9 @@
   <li [routerLink]="['listuser']" routerLinkActive="bg-gray-200 text-blue-600">
     User List<mat-icon>view_list</mat-icon>
   </li>
-  <li>Help <mat-icon>help</mat-icon></li>
+  <li id="help">
+    Help <mat-icon>help</mat-icon>
+  </li>
   <li>
     <a (click)="onLogout()" routerLinkActive="bg-gray-200 text-blue-600"
       >Logout <mat-icon>exit_to_app</mat-icon></a
