--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,28 @@
-<div class="min-h-screen">
-  <div class="card flex justify-start">
-    <p-chart
-      type="pie"
-      [data]="data"
-      [options]="options"
-      class="w-full md:w-[30rem]"
-    />
+<div class="container">
+  <app-pie-chart></app-pie-chart>
+  <div class="card">
+    <h2>Active Users</h2>
+    <span>{{active}}</span>
+  </div>
+  <div class="card">
+    <h2>InActive Users</h2>
+    <span>{{inactive}}</span>
+  </div>
+  <div class="card">
+    <h2>Total Users</h2>
+    <span>{{totalUser}}</span>
+  </div>
+  <app-pie-chart></app-pie-chart>
+  <div class="card">
+    <h2>Active Customers</h2>
+    <span>{{active}}</span>
+  </div>
+  <div class="card">
+    <h2>InActive Customers</h2>
+    <span>{{inactive}}</span>
+  </div>
+  <div class="card">
+    <h2>Total Customers</h2>
+    <span>{{totalUser}}</span>
   </div>
 </div>
